# ontology_research

./: .gitignore  README.md  REMOVED.JSONL  Spacy.md  candidate_and_paragraph_extraction.py  eval.ipynb  evaluate_benchmark.py  expanded_ontology_base.json  expanded_ontology_base_train.json  filtered_paragraphs_train.json  full_benchmark_pipeline.py  full_ontology_pipeline.py  full_ontology_pipeline_ablation_benchmark.py  full_ontology_pipeline_fast.py  full_ontology_pipeline_fast_ablation_test.py  full_ontology_pipeline_fast_ablation_test_eng.py  glossary_extract_unified.py  main.py  merge_ontologies.py  nil_prediction.py  ontology.md  ontology_base.json  ontology_building.md  ontology_paper.md  paul_pipeline_performance_log_benchmarking_backup.jsonl  pyproject.toml  transform.py  transformer.md
beekeeping_corpus/glossaries/: gl1.txt
beekeeping_corpus/ontology_training_test/: 001recent development on precision beekeeping.txt  002challenges in the development of precision beekeeping.txt  003precision beekeeping systems state of the arts pros and cons.txt
