[project]
name = "ontology-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "ollama>=0.6.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pypdf>=6.13.3",
    "rdflib>=7.6.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "torch>=2.12.0",
]
